@@ -90,9 +90,6 @@ then
 	LIBUSB_VER=${LIBUSB_VER#${LUSBMAJOR}.}
 	LUSBMINOR=${LIBUSB_VER%.*}
 	LUSBPLEVL=${LIBUSB_VER#${LUSBMINOR}.}
-	echo "LUSBMAJOR=$LUSBMAJOR"
-	echo "LUSBMINOR=$LUSBMINOR"
-	echo "LUSBPLEVL=$LUSBPLEVL"
 	#We require exactly 0 major version here
 	if test "$LUSBMAJOR" -eq "0"; then
 		#We require at least 1 minor version number
